# Strategos

./: .gitignore  .gitigore  CMakeLists.txt  Gameplay.md  LICENSE  Readme.md  r  start  w  zip
include/: board.hpp  game.hpp  utils.hpp
src/: board.cpp  game.cpp  main.cpp  utils.cpp
